--- a/src/main/resources/ow/henhacks23/hello-view.fxml
+++ b/src/main/resources/ow/henhacks23/hello-view.fxml
@@ -5,12 +5,12 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="ow.henhacks23.HelloController">
   <padding>
     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
   </padding>
-
-  <Label fx:id="welcomeText"/>
-  <Button text="Hello!" onAction="#onHelloButtonClick"/>
+  <Label fx:id="searchText" text="Click a hall on the map to get a route!"/>
+  <TextField alignment="BOTTOM_CENTER" text="Or Search for a Hall Here!" fx:id="searchBox" onAction="#onSearch"/>
 </VBox>
