--- a/src/main/resources/ow/henhacks23/hello-view.fxml
+++ b/src/main/resources/ow/henhacks23/hello-view.fxml
@@ -3,14 +3,19 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.image.Image?>
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.ImageView?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="ow.henhacks23.HelloController">
   <padding>
     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
   </padding>
-  <Label fx:id="searchText" text="Click a hall on the map to get a route!"/>
-  <TextField alignment="BOTTOM_CENTER" text="Or Search for a Hall Here!" fx:id="searchBox" onAction="#onSearch"/>
+  <Label fx:id="searchText" text=""/>
+  <ImageView fx:id="imageView"/>
+  <TextField alignment="BOTTOM_CENTER" text="Search for a Hall Here!" fx:id="searchBox" onAction="#onSearch"
+  maxWidth="500"
+  maxHeight="500"/>
 </VBox>
