--- a/src/main/resources/ow/henhacks23/hello-view.fxml
+++ b/src/main/resources/ow/henhacks23/hello-view.fxml
@@ -8,14 +8,17 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
+<?import javafx.scene.shape.Line?>
+
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="ow.henhacks23.HelloController">
   <padding>
     <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
   </padding>
   <Label fx:id="searchText" text=""/>
-  <ImageView fx:id="imageView" translateZ="0"/>
+  <ImageView fx:id="imageView"/>
   <TextField alignment="BOTTOM_CENTER" text="Search for a Hall Here!" fx:id="searchBox" onAction="#onSearch"
   maxWidth="500"
   maxHeight="500"/>
+  <Line endX="100" endY="100" visible="false" fx:id="line"/>
 </VBox>
